--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Seja Vendedor | Nibuy</title>
-  <link rel="stylesheet" href="seja-vendedor.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <header class="hero">
@@ -47,7 +47,7 @@
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_subject" value="Novo vendedor no Nibuy 🚀">
     <input type="hidden" name="_template" value="table"> 
-    <input type="hidden" name="_next" value="https://eduj007.github.io/Nibuy/sucesso.html">
+    <input type="hidden" name="_next" value="https://eduj007.github.io/Nibuy/index.html">
 
     <button type="submit">Quero ser vendedor</button>
   </form>
