--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     <h2>Por que vender no Nibuy?</h2>
     <div class="cards">
       <div class="card">
-        <img src="icons/visibilidade.svg" alt="Visibilidade">
+        <img src="Visibilidade.webp" alt="Visibilidade">
         <h3>Mais visibilidade</h3>
         <p>Seu produto na frente de quem realmente procura.</p>
       </div>
       <div class="card">
-        <img src="icons/facilidade.svg" alt="Facilidade">
+        <img src="engrenagem.png" alt="Facilidade">
         <h3>Plataforma simples</h3>
         <p>Gerencie seus produtos sem complicação.</p>
       </div>
       <div class="card">
-        <img src="icons/lucro.svg" alt="Lucro">
+        <img src="Gráfico.webp" alt="Lucro">
         <h3>Mais lucro</h3>
         <p>Taxas baixas e mais retorno pra você.</p>
       </div>
