--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
  <section id="cadastro" class="cadastro">
   <h2>Cadastre-se e comece a vender</h2>
-  <form class="form-vendedor" action="https://formsubmit.co/SEUEMAILAQUI" method="POST">
+  <form class="form-vendedor" action="https://formsubmit.co/eduardojos457@gmail.com" method="POST">
     <input type="text" name="nome" placeholder="Nome completo" required>
     <input type="email" name="email" placeholder="E-mail" required>
     <input type="tel" name="telefone" placeholder="Telefone" required>
@@ -48,7 +48,7 @@
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_subject" value="Novo vendedor no Nibuy 🚀">
     <input type="hidden" name="_template" value="table"> 
-    <input type="hidden" name="_next" value="https://eduj007.github.io/Nibuy/index.html">
+    <input type="hidden" name="_next" value="https://eduj007.github.io/Sucesso/">
 
     <button type="submit">Quero ser vendedor</button>
   </form>
